Bug 414676 - Long strings on the sidebar nav doesn't overflow gracefully

--- a/bundles/org.eclipse.orion.client.ui/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/ide.css
@@ -245,6 +245,7 @@ textarea.parameterInput {
 	display: inline-block;
 	padding: 4px;
 	vertical-align: baseline;
+	white-space: nowrap;
 }
 
 .singleNavColumn {
